chore(config): update project structure
skip

skip

--- a/src/assets/styles/main.styl
+++ b/src/assets/styles/main.styl
@@ -1,7 +1,7 @@
-// Base
-@import './base/reset'
-@import './base/fonts'
-@import './base/global'
+// Core
+@import './core/reset'
+@import './core/fonts'
+@import './core/global'
 
 // System
 @import './system.styl'
