--- a/src/assets/styles/core/global.styl
+++ b/src/assets/styles/core/global.styl
@@ -1,5 +1,5 @@
 html {
-	font-family Plex Regular, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif
+	font-family $font-body
 	word-spacing 1px
 	-ms-text-size-adjust 100%
 	-webkit-text-size-adjust 100%
