--- a/src/assets/styles/variables/colors.styl
+++ b/src/assets/styles/variables/colors.styl
@@ -2,13 +2,4 @@
 $white = #FFFFFF
 $black = #000000
 
-// Brand
-$brand-black = #3C3C3C
-$brand-green = #00FF97
-$brand-grey-dark = #757575
-$brand-grey-light = #D6D6D6
-$brand-white = #F6F6F6
-$brand-accent-purple = #CC81E5
-$brand-accent-blue = #00CBC6
-$brand-accent-orange = #FF8165
-$brand-accent-yellow = #FFE768
+// Project
