feat(style): add tailwind configuration
skip

skip

--- a/src/assets/styles/system.styl
+++ b/src/assets/styles/system.styl
@@ -4,6 +4,6 @@
 // Variables
 @import './variables/colors.styl'
 @import './variables/fonts.styl'
-@import './variables/responsive.styl'
+@import './variables/breakpoints.styl'
 @import './variables/spacing.styl'
 @import './variables/text.styl'
